# ysc2

./: Cargo.toml  LICENSE  README-ko.md  README.md
auxcrypt/: Cargo.toml  README-ko.md  README.md
auxcrypt/src/: consts.rs  lib.rs  stream.rs  tests.rs  variant.rs
auxcrypt/src/backends/: mod.rs  simd.rs  soft.rs
src/: consts.rs  core.rs  lib.rs
src/backends/: mod.rs  simd.rs  soft.rs
ysc2/: Cargo.toml  README-ko.md  README.md
ysc2/src/: aead.rs  consts.rs  lib.rs  sponge.rs  stream.rs  tests.rs  variant.rs
ysc2/src/backends/: mod.rs  simd.rs  soft.rs
