[package]
name = "ysc2"
version = "0.0.1"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/newsniper-org/ysc2"

# To use the portable SIMD backend, you must build with the nightly toolchain
# and enable the `portable_simd` feature flag via RUSTFLAGS.
# Example: RUSTFLAGS='--cfg ysc2_simd' cargo +nightly build

[dependencies]
cfg-if = { version = "1.0.1", features = ["core"] }
cipher = { version = "0.4.4", features = ["alloc", "dev", "rand_core", "zeroize"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive", "std", "simd", "derive"] }

[features]
default = []
ysc2_simd = []